--- a/mypage.css
+++ b/mypage.css
@@ -22,6 +22,7 @@ h1 {
 	margin-left: 5%;
 	margin-bottom: 5%;
 	max-width: 440px;
+	display: block;
 }
 
 #mainTable {
@@ -38,6 +39,8 @@ table p {
 	margin-left: 15%;
 	margin-right: 15%;
 	margin-bottom: 20px;
+	margin-top: 10px;
+	display: block;
 }
 
 .tableCell {
